--- a/assets/theme-cu.css
+++ b/assets/theme-cu.css
@@ -1,5 +1,34 @@
 /**
  * --------------------------------------------------------------------
+ * GENERAL
+ * --------------------------------------------------------------------
+ */
+
+.addtocart {
+  text-align: right;
+}
+.addtocart .add-button {
+  background: var(--primary-button-background);
+  color: var(--primary-button-text-color);
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  font-size: 27px;
+}
+.addtocart .qty-input {
+  width: 55px;
+  transform: translate(14px, -4px);
+  padding: 10px;
+  text-align: center;
+  -webkit-appearance: none !important;
+  -moz-appearance: none;
+  appearance: none !important;
+  border: none;
+  background: #ebebf1;
+}
+
+/**
+ * --------------------------------------------------------------------
  * HOME
  * --------------------------------------------------------------------
  */
