style: manipulate gap and margin

--- a/assets/theme-cu.css
+++ b/assets/theme-cu.css
@@ -3,7 +3,9 @@
  * GENERAL
  * --------------------------------------------------------------------
  */
-
+.section {
+  margin: 85px 0;
+}
 .addtocart {
   text-align: right;
 }
