--- a/assets/theme.css
+++ b/assets/theme.css
@@ -13920,9 +13920,8 @@ h2.slideshow__title.heading.h1 {
     left: -36px!important;
     }
   
-  .flickity-viewport {
-  
+  /* .flickity-viewport {
     height: 351px!important;
-}
+} */
   
 }
