--- a/assets/theme-cu.css
+++ b/assets/theme-cu.css
@@ -107,3 +107,24 @@
   width: 100%;
   margin-bottom: 20px;
 }
+
+/**
+ * --------------------------------------------------------------------
+ * MAIN PRODUCT 
+ * --------------------------------------------------------------------
+ */
+[data-section-type="product"] [data-action-type="back"] {
+  color: var(--primary-button-text-color);
+  background: var(--secondary-button-background);
+  font-size: calc(
+    var(--base-text-font-size) - (var(--default-text-font-size) - 12px)
+  );
+  border-radius: 3px;
+  padding: 5px 15px;
+  border: 1px solid var(--text-color);
+  transition: all 0.3s ease;
+}
+[data-section-type="product"] [data-action-type="back"]:hover {
+  color: var(--secondary-button-background);
+  background: var(--primary-button-text-color);
+}
