--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -59,8 +59,8 @@
             {%- endif -%}
           </div>
         {%- endif -%}
+          <button data-action-type="back" class="product">back</button>
       </div>
-
       <div class="product-block-list product-block-list--{{ section.settings.image_size }}">
         <div class="product-block-list__wrapper">
           {%- if product.media.size > 0 -%}
