style: improve button

--- a/assets/theme-cu.css
+++ b/assets/theme-cu.css
@@ -113,18 +113,26 @@
  * MAIN PRODUCT 
  * --------------------------------------------------------------------
  */
+[data-section-type="product"] .product-back {
+  border-bottom: 1px solid var(--border-color);
+}
 [data-section-type="product"] [data-action-type="back"] {
-  color: var(--primary-button-text-color);
-  background: var(--secondary-button-background);
+  margin: 10px;
   font-size: calc(
-    var(--base-text-font-size) - (var(--default-text-font-size) - 12px)
+    var(--base-text-font-size) - (var(--default-text-font-size) - 14px)
   );
   border-radius: 3px;
-  padding: 5px 15px;
-  border: 1px solid var(--text-color);
+  padding: 3px 15px 3px 5px;
+  /* border: 1px solid var(--text-color); */
   transition: all 0.3s ease;
 }
-[data-section-type="product"] [data-action-type="back"]:hover {
-  color: var(--secondary-button-background);
-  background: var(--primary-button-text-color);
+[data-section-type="product"] [data-action-type="back"] svg {
+  margin: 0 6px;
+  width: 10px;
+  height: 12px;
+}
+@media screen and (min-width: 641px) {
+  [data-section-type="product"] .product-back {
+    display: none;
+  }
 }
