--- a/assets/theme-cu.css
+++ b/assets/theme-cu.css
@@ -12,15 +12,16 @@
 .addtocart .add-button {
   background: var(--primary-button-background);
   color: var(--primary-button-text-color);
-  width: 50px;
-  height: 50px;
+  width: 42px;
+  height: 42px;
   border-radius: 50%;
-  font-size: 27px;
+  font-size: 24px;
+  line-height: 3px;
 }
 .addtocart .qty-input {
   width: 55px;
-  transform: translate(14px, -4px);
-  padding: 10px;
+  transform: translate(16px, -4px);
+  padding: 9px 13px 11px 9px;
   text-align: center;
   -webkit-appearance: none !important;
   -moz-appearance: none;
