--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -60,7 +60,12 @@
           </div>
         {%- endif -%}
       </div>
-
+      <div class="product-back"> 
+        <button data-action-type="back">
+          {%- render 'icon', icon : 'arrow-left' -%}
+          back
+        </button>
+      </div>
       <div class="product-block-list product-block-list--{{ section.settings.image_size }}">
         <div class="product-block-list__wrapper">
           {%- if product.media.size > 0 -%}
