--- a/assets/theme-cu.css
+++ b/assets/theme-cu.css
@@ -12,15 +12,17 @@
 .addtocart .add-button {
   background: var(--primary-button-background);
   color: var(--primary-button-text-color);
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
-  font-size: 27px;
+  font-size: 24px;
+  line-height: 3px;
+  vertical-align: middle;
 }
 .addtocart .qty-input {
   width: 55px;
-  transform: translate(14px, -4px);
-  padding: 10px;
+  transform: translate(16px, 2px);
+  padding: 9px 13px 11px 9px;
   text-align: center;
   -webkit-appearance: none !important;
   -moz-appearance: none;
@@ -106,4 +108,33 @@
   text-align: center;
   width: 100%;
   margin-bottom: 20px;
+}
+
+/**
+ * --------------------------------------------------------------------
+ * MAIN PRODUCT 
+ * --------------------------------------------------------------------
+ */
+[data-section-type="product"] .product-back {
+  border-bottom: 1px solid var(--border-color);
+}
+[data-section-type="product"] [data-action-type="back"] {
+  margin: 10px;
+  font-size: calc(
+    var(--base-text-font-size) - (var(--default-text-font-size) - 14px)
+  );
+  border-radius: 3px;
+  padding: 3px 15px 3px 5px;
+  /* border: 1px solid var(--text-color); */
+  transition: all 0.3s ease;
+}
+[data-section-type="product"] [data-action-type="back"] svg {
+  margin: 0 6px;
+  width: 10px;
+  height: 12px;
+}
+@media screen and (min-width: 641px) {
+  [data-section-type="product"] .product-back {
+    display: none;
+  }
 }
