--- a/snippets/cu-modal.liquid
+++ b/snippets/cu-modal.liquid
@@ -1,4 +1,9 @@
-<button class="btn" data-popup-type="survey">Questions?</button>
+<div class="btn-feedback__container">
+    <button class="btn-feedback__label" data-popup-type="survey">
+        <div class="btn-feedback__text">feedback</div>
+    </button>
+</div>
+
 
 <div class='cu-modal' aria-hidden="true"> 
     <div class="cu-modal__dialog" role="dialog">
