fix: Clicking outside popup

--- a/assets/theme-cu.css
+++ b/assets/theme-cu.css
@@ -138,3 +138,22 @@
     display: none;
   }
 }
+
+/**
+ * --------------------------------------------------------------------
+ * POPUP NEWS LETTER
+ * --------------------------------------------------------------------
+ */
+.modal--newsletter {
+  height: initial;
+  top: 0;
+}
+.modal--newsletter .modal__dialog {
+  position: absolute;
+  bottom: 0;
+}
+@media screen and (min-width: 641px) {
+  .modal--newsletter .modal__dialog {
+    position: relative;
+  }
+}
