--- a/assets/theme-cu.css
+++ b/assets/theme-cu.css
@@ -141,6 +141,124 @@
 
 /**
  * --------------------------------------------------------------------
+ * MODAL 
+ * --------------------------------------------------------------------
+ */
+
+.cu-modal {
+  position: fixed;
+  left: 0;
+  width: 100%;
+  margin: 0 auto;
+  z-index: 10;
+  visibility: hidden;
+  pointer-events: none;
+  opacity: 0;
+  transition: opacity 0.2s ease-in-out, visibility 0.2s ease-in-out;
+  bottom: 0;
+  top: auto;
+  height: auto;
+}
+.cu-modal[aria-hidden="false"] {
+  visibility: visible;
+  opacity: 1;
+  pointer-events: auto;
+}
+.cu-modal::before {
+  position: fixed;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.35);
+  pointer-events: none;
+}
+.cu-modal__dialog {
+  position: relative;
+  height: auto;
+  padding: 48px 20px 20px 20px;
+  max-height: 100vh;
+  background: var(--secondary-background);
+  box-shadow: 0 1px 2px rgb(0 0 0 / 30%);
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
+  transform: scale(0.9);
+  transition: transform 0.25s ease-in-out, visibility 0.25s ease-in-out;
+}
+.cu-modal[aria-hidden="false"] .cu-modal__dialog {
+  transform: scale(1);
+  transition: transform 0.4s cubic-bezier(0.18, 1.25, 0.4, 1),
+    visibility 0.4s linear;
+}
+.popup__close {
+  position: absolute;
+  right: 30px;
+  top: 15px;
+}
+@media screen and (min-width: 641px) {
+  .cu-modal {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    top: 0;
+  }
+  .cu-modal__dialog {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    width: 750px;
+    max-width: 700px;
+    height: auto;
+    max-height: calc(100% - 80px);
+    border-radius: 3px;
+    padding: 65px 20px 40px;
+  }
+}
+
+/**
+ * --------------------------------------------------------------------
+ * feedback 
+ * --------------------------------------------------------------------
+ */
+.btn-feedback__container {
+  position: fixed;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 0;
+  z-index: 100;
+}
+.btn-feedback__label {
+  font-size: 13px;
+  position: relative;
+  padding: 12px 8px;
+  cursor: pointer;
+  white-space: nowrap;
+  background-color: var(--header-accent-color);
+  transition: transform 0.1s ease-in-out, box-shadow 0.1s ease-in-out;
+  opacity: 0.96;
+  border-radius: 3px 0 0 3px;
+  text-transform: capitalize;
+  transform: translateX(2px);
+}
+.btn-feedback__label:hover {
+  box-shadow: 0 0 35px 2px rgb(0 0 0 / 24%);
+  transform: translateX(0);
+  opacity: 1;
+}
+.btn-feedback__text {
+  overflow-wrap: normal !important;
+  word-break: normal !important;
+  word-wrap: normal !important;
+  white-space: nowrap !important;
+  cursor: pointer;
+  writing-mode: vertical-lr;
+  transform: rotate(180deg);
+  color: var(--secondary-background);
+}
+/**
+ * -------------------------------------------------------------------
  * POPUP NEWS LETTER
  * --------------------------------------------------------------------
  */
