--- a/assets/theme-cu.css
+++ b/assets/theme-cu.css
@@ -156,8 +156,10 @@
   opacity: 0;
   transition: opacity 0.2s ease-in-out, visibility 0.2s ease-in-out;
   bottom: 0;
-  top: auto;
-  height: auto;
+  /* top: auto;
+  height: auto; */
+  top: 0;
+  height: initial;
 }
 .cu-modal[aria-hidden="false"] {
   visibility: visible;
@@ -175,7 +177,6 @@
   pointer-events: none;
 }
 .cu-modal__dialog {
-  position: relative;
   height: auto;
   padding: 48px 20px 20px 20px;
   max-height: 100vh;
@@ -185,6 +186,11 @@
   -webkit-overflow-scrolling: touch;
   transform: scale(0.9);
   transition: transform 0.25s ease-in-out, visibility 0.25s ease-in-out;
+
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 .cu-modal[aria-hidden="false"] .cu-modal__dialog {
   transform: scale(1);
@@ -205,7 +211,6 @@
     top: 0;
   }
   .cu-modal__dialog {
-    position: absolute;
     width: 100%;
     height: 100%;
     width: 750px;
@@ -214,6 +219,9 @@
     max-height: calc(100% - 80px);
     border-radius: 3px;
     padding: 65px 20px 40px;
+    left: initial;
+    right: initial;
+    bottom: initial;
   }
 }
 
@@ -227,7 +235,7 @@
   top: 50%;
   transform: translateY(-50%);
   right: 0;
-  z-index: 100;
+  z-index: 8;
 }
 .btn-feedback__label {
   font-size: 13px;
