--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -173,6 +173,7 @@
     </ul>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     {% render 'ajaxify-cart' %}
   <!--Gem_Page_Footer_Script-->
 {% include 'gem-app-footer-scripts' %}
