--- a/sections/image-with-text-overlay-cu.liquid
+++ b/sections/image-with-text-overlay-cu.liquid
@@ -3,6 +3,11 @@
   #shopify-section-{{ section.id }} .heading {
     color: {{ section.settings.color }};
   }
+  .page__suprise--heroImg{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+  }
 </style>
 
 <header class="page__header page__header--stack page__header--centered page__header--image {% if section.settings.show_image_overlay %}page__header--overlay{% endif %} {% if section.settings.image_edge_to_edge %}page__header--edge2edge{% endif %}">
@@ -10,7 +15,9 @@
     {%- capture supported_sizes -%}{%- render 'image-size', sizes: '300,400,500,600,700,800,900,1000,1100,1200,1300,1400,1500,1600,1700,1800,1900,2000', image: section.settings.image -%}{%- endcapture -%}
     {%- assign image_url = section.settings.image | img_url: '1x1' | replace: '_1x1.', '_{width}x.' -%}
 
-    <img data-src="{{ image_url }}" data-widths="[{{ supported_sizes }}]" data-sizes="auto" alt="{{ section.settings.image.alt | escape }}" class="lazyload image--fade-in page__header-image">
+    {% comment %} <img data-src="{{ image_url }}" data-widths="[{{ supported_sizes }}]" data-sizes="auto" alt="{{ section.settings.image.alt | escape }}" class="lazyload image--fade-in page__header-image"> {% endcomment %}
+
+    <div class='page__suprise--heroImg' style="background-image: url(https:{{ section.settings.image | image_url }})"></div>
   {%- else -%}
     {{ 'lifestyle-1' | placeholder_svg_tag: 'page__header-image page__header-image--placeholder' }}
   {%- endif -%}
