--- a/sections/image-with-text-overlay-cu.liquid
+++ b/sections/image-with-text-overlay-cu.liquid
@@ -1,12 +1,36 @@
 <style>
+  /* Chrome, Safari, Opera */
+  @-webkit-keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity: 1;}
+  }
+
+  /* Standard syntax */
+  @keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity: 1;}
+  }
   #shopify-section-{{ section.id }},
   #shopify-section-{{ section.id }} .heading {
     color: {{ section.settings.color }};
   }
-  .page__suprise--heroImg{
+  .page__suprise--heroImg, .page__suprise--heroImg .page__suprise--img{
     width: 100%;
     height: 100%;
     position: absolute;
+  }
+  .page__suprise--heroImg:before{
+    content:'';
+    position: absolute;
+    left:0;
+    right:0;
+    top:0;
+    bottom:0; 
+    background-color: #111137;
+  }
+  .page__suprise--heroImg .page__suprise--img{
+    z-index:1;
+    animation: fadeIn 4s ;
   }
   .page__header {
     margin: 35px 0 0 ;
@@ -89,7 +113,9 @@
 
 
 
-    <div class='page__suprise--heroImg' style="background-image: url(https:{{ section.settings.image | image_url }})"></div>
+    <div class='page__suprise--heroImg'>
+      <div class='page__suprise--img' style="background-image: url(https:{{ section.settings.image | image_url }})"></div>
+    </div>
   {%- else -%}
     {{ 'lifestyle-1' | placeholder_svg_tag: 'page__header-image page__header-image--placeholder' }}
   {%- endif -%}
