imrpve animation on page suprise

--- a/sections/image-with-text-overlay-cu.liquid
+++ b/sections/image-with-text-overlay-cu.liquid
@@ -30,7 +30,8 @@
   }
   .page__suprise--heroImg .page__suprise--img{
     z-index:1;
-    animation: fadeIn 4s ;
+    animation: fadeIn 4s 5s forwards;
+    opacity:0;
   }
   .page__header {
     margin: 35px 0 0 ;
