--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -177,7 +177,10 @@
     </ul>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    {% comment %} <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script> {% endcomment %}
+    <link rel="preload" as="script" href="{{ '//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js' | asset_url }}">
+    <script src="{{ '//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js' }}" defer></script>
+
     {% render 'ajaxify-cart' %}
   <!--Gem_Page_Footer_Script-->
 {% include 'gem-app-footer-scripts' %}
