--- a/snippets/ajaxify-cart.liquid
+++ b/snippets/ajaxify-cart.liquid
@@ -170,7 +170,7 @@ Shopify.AjaxifyCart.init();
 {{ '//cdnjs.cloudflare.com/ajax/libs/animate.css/3.1.0/animate.min.css' | stylesheet_tag }}
 {% endcomment %}
 
-{{ '//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.css' | stylesheet_tag }}
+{{ '//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.min.css' | stylesheet_tag }}
 
 <style>
 .ajaxified-cart-feedback {
