--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -178,7 +178,7 @@
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     {% comment %} <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script> {% endcomment %}
-    <link rel="preload" as="script" href="{{ '//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js' | asset_url }}">
+    <link rel="preload" as="script" href="{{ '//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js'}}">
     <script src="{{ '//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js' }}" defer></script>
 
     {% render 'ajaxify-cart' %}
