feat: convert lazy to preload

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -59,6 +59,8 @@
           <a href="{{ routes.root_url }}" class="header__logo-link">
             {%- if section.settings.logo != blank -%}
               {%- capture image_size -%}{{ section.settings.logo_max_width }}x{%- endcapture -%}
+              {% comment %} <link rel="preload" as="image" href="{{section.settings.logo | img_url:image_size,scale: 2 }}"/> {% endcomment %}
+
               <span class="visually-hidden">{{ shop.name }}</span>
               <img class="header__logo-image"
                    style="max-width: {{ section.settings.logo_max_width }}px"
